--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "Unique Piscinas",
-    "slug": "unique-piscinas",
-    "version": "1.0.0",
+    "name": "Centro SIS",
+    "slug": "centro-SIS",
+    "version": "0.1.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "unique",
+    "scheme": "centroSIS",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
