--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "module": "commonjs",
+    "types": ["node", "jest"], // solo los que realmente uses
+    "module": "es2015",
     "strict": true,
     "paths": {
       "@/*": [
