--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "centro-sis",
+  "name": "centro-sis-frontend",
   "main": "expo-router/entry",
   "version": "0.1.0",
+  "homepage": "https://centrosis.tenri.com.ar",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -11,68 +12,53 @@
     "test": "jest --watchAll",
     "lint": "expo lint",
     "format": "prettier --write .",
-    "deploy": "gh-pages --nojekyll -d dist --cname unique.estonianport.com.ar",
-    "predeploy": "expo export:web dist --no-bundler && cp dist/index.html dist/404.html"
+    "deploy": "gh-pages --nojekyll -d dist --cname centrosis.tenri.com.ar",
+    "predeploy": "npx expo export && cp dist/index.html dist/404.html"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^5.2.2",
-    "@react-native-masked-view/masked-view": "^0.3.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/drawer": "^7.1.1",
-    "@react-navigation/native": "^7.0.14",
-    "axios": "^1.12.2",
-    "expo-blur": "~15.0.7",
+    "@react-navigation/drawer": "^7.5.0",
+    "axios": "^1.10.0",
+    "expo": "^54.0.10",
     "expo-constants": "~18.0.9",
-    "expo-font": "~14.0.8",
-    "expo-haptics": "~15.0.7",
+    "expo-font": "^14.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.8",
-    "expo-secure-store": "~15.0.7",
-    "expo-splash-screen": "~31.0.10",
+    "expo-secure-store": "^15.0.7",
+    "expo-splash-screen": "^31.0.10",
     "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
+    "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "^0.5.1",
     "tailwindcss": "^3.4.17",
-    "yup": "^1.7.1",
-    "zustand": "^5.0.8"
+    "yup": "^1.7.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/babel__core": "^7.20.5",
-    "@types/babel__generator": "^7.27.0",
-    "@types/babel__template": "^7.4.4",
-    "@types/babel__traverse": "^7.28.0",
-    "@types/eslint": "^9.6.1",
-    "@types/estree": "^1.0.8",
-    "@types/hammerjs": "^2.0.46",
-    "@types/jest": "^29.5.12",
-    "@types/json-schema": "^7.0.15",
-    "@types/node": "^24.5.2",
-    "@types/react": "~19.1.0",
-    "expo": "^54.0.10",
+    "@babel/core": "^7.26.0",
+    "@types/react": "~19.1.10",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "babel-preset-expo": "~54.0.0",
     "gh-pages": "^6.3.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~54.0.12",
+    "jest": "~29.7.0",
+    "jest-expo": "^54.0.0",
+    "prettier": "^3.6.2",
+    "react-native-svg": "15.12.1",
     "react-native-svg-transformer": "^1.5.1",
-    "react-test-renderer": "19.1.0",
-    "typescript": "^5.3.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
