--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,12 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "types": ["node", "jest"], // solo los que realmente uses
-    "module": "es2015",
-    "strict": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
+
   "include": [
     "**/*.ts",
     "**/*.tsx",
