--- a/package.json
+++ b/package.json
@@ -1,63 +1,53 @@
 {
   "name": "centro-sis-frontend",
   "main": "expo-router/entry",
-  "version": "0.1.0",
-  "homepage": "https://centrosis.tenri.com.ar",
+  "version": "1.0.0",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll",
-    "lint": "expo lint",
-    "format": "prettier --write .",
-    "deploy": "gh-pages --nojekyll -d dist --cname centrosis.tenri.com.ar",
-    "predeploy": "npx expo export && cp dist/index.html dist/404.html"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "lint": "expo lint"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^5.2.2",
-    "@react-navigation/drawer": "^7.5.0",
-    "axios": "^1.10.0",
+    "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/drawer": "^7.5.8",
+    "@react-navigation/elements": "^2.6.3",
+    "@react-navigation/native": "^7.1.17",
+    "axios": "^1.12.2",
     "expo": "^54.0.10",
     "expo-constants": "~18.0.9",
-    "expo-font": "^14.0.8",
+    "expo-font": "~14.0.8",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.8",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.8",
+    "expo-router": "^6.0.8",
     "expo-secure-store": "^15.0.7",
-    "expo-splash-screen": "^31.0.10",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
-    "nativewind": "^4.1.23",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.7",
+    "expo-web-browser": "~15.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-native": "0.81.4",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.0",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0",
-    "react-native-webview": "13.15.0",
-    "react-native-worklets": "^0.5.1",
+    "react-native-svg-transformer": "^1.5.1",
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1",
     "tailwindcss": "^3.4.17",
     "yup": "^1.7.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@types/react": "~19.1.10",
-    "babel-plugin-module-resolver": "^5.0.2",
+    "@babel/core": "^7.28.4",
+    "@types/react": "~19.1.0",
     "babel-preset-expo": "~54.0.0",
-    "gh-pages": "^6.3.0",
-    "jest": "~29.7.0",
-    "jest-expo": "^54.0.0",
-    "prettier": "^3.6.2",
-    "react-native-svg": "15.12.1",
-    "react-native-svg-transformer": "^1.5.1",
+    "eslint": "^9.25.0",
+    "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
   },
   "private": true
