--- a/package.json
+++ b/package.json
@@ -16,29 +16,35 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^5.2.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/drawer": "^7.5.8",
+    "@react-navigation/drawer": "^7.6.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native": "^7.1.8",
     "axios": "^1.12.2",
-    "expo": "^54.0.10",
+    "expo": "54.0.19",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
+    "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
-    "expo-router": "^6.0.8",
+    "expo-router": "~6.0.13",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
+    "expo-system-ui": "~6.0.8",
+    "expo-web-browser": "~15.0.8",
     "gh-pages": "^6.3.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-svg-transformer": "^1.5.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
@@ -48,6 +54,7 @@
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@types/react": "~19.1.0",
+    "@types/react-navigation": "^3.0.8",
     "babel-preset-expo": "~54.0.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
