--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.5.1",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/drawer": "^7.6.0",
@@ -39,6 +40,7 @@
     "expo-web-browser": "~15.0.8",
     "gh-pages": "^6.3.0",
     "react": "19.1.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-native": "0.81.5",
@@ -49,6 +51,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-svg-transformer": "^1.5.1",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "tailwindcss": "^3.4.17",
@@ -57,6 +60,7 @@
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@types/react": "~19.1.0",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-navigation": "^3.0.8",
     "babel-preset-expo": "~54.0.0",
     "eslint": "^9.25.0",
