--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "babel-preset-expo": "~54.0.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "typescript": "~5.9.2"
   },
   "private": true
